# EvSemMap

./: LICENSE  README.md
EvSemSeg/: README.md  argparser.py  execute_params.py  main.py  prep.py  test.py  train.py  val.py
EvSemSeg/datasets/: loader_rellis.py  loader_rugd.py  loader_util.py  v3_v1.txt  v3_v1_colormap_paper_unified.txt
EvSemSeg/models/: evidential_loss.py  seg_models.py  unc_seg_models.py
EvSemSeg/models/metrics/: ece_calculator.py  mIoU_calculator.py
Projection/: README.md  rellis_acc_inference.py
Projection/evtk/: hl.py
Projection/rellis_utils/: lidar2img.py
Projection/universal_utils/: universal_utils.py
SemanticMap/: README.md
SemanticMap/src/SemanticMap/: CMakeLists.txt  package.xml
SemanticMap/src/SemanticMap/config/datasets/: deploy_rellisv3_4_1-30.yaml
SemanticMap/src/SemanticMap/config/methods/: dempster.yaml  ebs.yaml  sbki.yaml
SemanticMap/src/SemanticMap/include/semantic_bki/common/: dempster.h  npy.hpp  pcd_extension.hpp  vmarkerarray_pub.h  vpoint3f.h
SemanticMap/src/SemanticMap/include/semantic_bki/mapping/: vbki.h  vbkiblock.h  vbkioctomap.h  vbkioctree.h  vbkioctree_node.h
SemanticMap/src/SemanticMap/launch/: map_reader.launch  mapping.launch  pcd_conversion.launch
SemanticMap/src/SemanticMap/rviz/: ex_map_reader.rviz
SemanticMap/src/SemanticMap/src/: map_reader.cpp  mapping.cpp  pcd_conversion.cpp
SemanticMap/src/SemanticMap/src/common/: dempster.cpp  pcd_extension.cpp  vpoint3f.cpp
SemanticMap/src/SemanticMap/src/mapping/: vbkiblock.cpp  vbkioctomap.cpp  vbkioctree.cpp  vbkioctree_node.cpp
